# Monita

./: .gitignore  README.md  index.html
fw/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
fw/main/: CMakeLists.txt  display.c  display.h  font_cjk.h  i2c_bus.c  i2c_bus.h  idf_component.yml  imu.c  imu.h  lvgl_ui.c  lvgl_ui.h  monita_main.c  mood.c  mood.h  net.c  net.h  ota.c  ota.h  power.c  power.h  touch.c  touch.h  version.h  wifi_secret.h.example
router/: 99-openclash-rewan  README.md  face_pub.init  face_pub.sh
tools/: genfont.py  mkbadge.py  render_preview.c
